# tuim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  example.cpp  test.cpp  test1.cpp  tuim.hpp
.github/workflows/: run_tests.yml
examples/: animations.cpp  buttons.cpp  colors.cpp  columns.cpp  cursor.cpp  dev.cpp  dev2.cpp  dialogue.cpp  example.cpp  formatting.cpp  inputs.cpp  paragraph.cpp  testing.cpp  text.cpp  texts.cpp
tests/: test.cpp  tests.cpp
